# llm_chat_app

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
sessions/: session1.json  session2.json
