[tool.poetry]
name = "llm-chat-app"
version = "0.1.0"
description = "This is llm chat app's package."
authors = ["sir-dukex"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
transformers = "^4.46.3"
torch = "^2.5.1"
python-dotenv = "^1.0.1"
pgvector = "^0.3.6"
langchain = "^0.3.9"
asyncio = "^3.4.3"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
scipy = "^1.14.1"
jupyterlab = "^4.3.2"
numpy = ">=1.22.4,<2"
polars = "^1.16.0"
pyspark = "^3.5.3"
streamlit = "^1.40.2"
openai = "^1.56.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
